src/test/ui/malformed/issue-69341-malformed-derive-inert.rs
fn main() {}

struct CLI {
    #[derive(parse())]
    //~^ ERROR traits in `#[derive(...)]` don't accept arguments
    //~| ERROR cannot find derive macro `parse` in this scope
    path: (),
    //~^ ERROR `derive` may only be applied to structs, enums and unions
}
